--- a/contact/index.html
+++ b/contact/index.html
@@ -24,12 +24,12 @@
 		</h2>
 		<div class="post_section">
 			<div class="contact-form-container">
-				<div id='contact-status-container' class='noselect'>
-					<div class="contact-status">
+				<div id='contact-status-container' class='noselect inactive'>
+					<div class="contact-status inactive">
 						<div id="wrapper">
 							<div class="profile-main-loader">
 								<div class="loader">
-									<svg class="circular-loader" viewBox="25 25 50 50">
+									<svg class="circular-loader inactive" viewBox="25 25 50 50">
 										<circle class="loader-path" cx="50" cy="50" r="20" fill="none" stroke="white" stroke-width="3" />
 									</svg>
 									<svg class="status-icon checkmark green-stroke contact-status">
@@ -57,8 +57,10 @@
 				</div>
 			</div>
 	</article>
+	<div class="buildwith">
 	<p class="buildwith">
 		Built with <a href="/projects/site_builder.html" class="visible_link">Static&nbspSite&nbspGenerator</a>, a tool I wrote in Python.
 	</p>
+	</div>
 </body>
 </html>
