--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
 	<meta name="robots" content="noindex">
 	<meta charset="utf-8">
@@ -9,6 +10,7 @@
 	<!-- <link rel="stylesheet" href="/css/test.css"> -->
 	<script src="/js/contact.js" charset="utf-8" defer></script>
 </head>
+
 <body>
 	<div class="breadcrumbs_div">
 		<ul class="breadcrumb">
@@ -57,10 +59,14 @@
 				</div>
 			</div>
 	</article>
-	<div class="buildwith">
-	<p class="buildwith">
-		Built with <a href="/projects/site_builder.html" class="visible_link">Static&nbspSite&nbspGenerator</a>, a tool I wrote in Python.
-	</p>
+
+	<div class="buildwith-container">
+		<div class="buildwith">
+			<p class="buildwith">
+				Built with <a href="/projects/site_builder.html" class="visible_link">Static&nbspSite&nbspGenerator</a>, a tool I wrote in Python.
+			</p>
+		</div>
 	</div>
 </body>
+
 </html>
