--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="robots" content="noindex">
 	<meta charset="utf-8">
-	<title>Contact Narek</title>
+	<title>Contact | Narek</title>
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="/css/contact.css">
 	<!-- <link rel="stylesheet" href="/css/test.css"> -->
